# nrf52840_st25r100

./: CMakeLists.txt  README.md  README.rst  prj.conf
boards/: nrf52840dk_nrf52840.overlay
module/drivers/: CMakeLists.txt  Kconfig
module/drivers/nfc/: CMakeLists.txt  Kconfig
module/drivers/nfc/st25r100/: CMakeLists.txt  Kconfig  platform.c  rfal_platform.h  st25r100_dev_structs.h  st25r100_drv.c  st25r100_drv.h  st25r100_spi.c  st25r100_trigger.c
module/drivers/nfc/st25r100/st/rfal/: CMakeLists.txt
module/drivers/nfc/st25r100/st/rfal/Inc/: rfal_defConfig.h
module/drivers/nfc/st25r100/st/rfal/Src/: rfal_nfc.c  rfal_nfcv.c
module/drivers/nfc/st25r100/st/rfal/doc/: Release_Notes.html
module/drivers/nfc/st25r100/st/st25r100/: CMakeLists.txt  Release_Notes.html  rfal_analogConfigTbl.h  rfal_dpoTbl.h  rfal_features.h  rfal_rfst25r200.c  st25r200.c  st25r200.h  st25r200_com.c  st25r200_com.h  st25r200_irq.c  st25r200_irq.h  st_errno.h  timer.c  timer.h
module/dts/bindings/: st,st25r100.yaml
module/zephyr/: module.yaml
src/: demo.h  demo_polling.c  main.c  utils.h
